Bug 1685099 - Don't reinit TrackBuffersManager on repeat video init data. r=alwu

This updates the repeat init data detection code in TrackBuffersManager to also
detect repeat video init data. This will also detect cases where the init
segment contains repeat video and audio init data if both the audio and video
are the same as the previous init data.

Differential Revision: https://phabricator.services.mozilla.com/D103174